--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,7 @@
     color: #fff;
     background-color: transparent;
     padding: 8px 25px;
+    text-decoration: none;
     transition: all .2s linear;
 
     &:hover {
@@ -30,6 +31,7 @@
     background-color: #ED2AB6;
     padding: 8px 25px;
     transition: all .2s linear;
+    text-decoration: none;
 
     &:hover {
         background-color: transparent;
@@ -39,6 +41,7 @@
 
 @mixin gbtn {
     font-family: 'Inter', sans-serif;
+    text-decoration: none;
     font-size: 16px;
     color: #fff;
     cursor: pointer;
@@ -58,10 +61,11 @@
 }
 
 // header section started
-.scrolled{
+.scrolled {
     box-shadow: 0px -9px 20px 6px #141414;
-    background: linear-gradient(157deg, rgba(97,0,255,1) 12%, rgba(126,0,186,1) 50%, rgba(97,0,255,1) 81%);
+    background: linear-gradient(157deg, rgba(97, 0, 255, 1) 12%, rgba(126, 0, 186, 1) 50%, rgba(97, 0, 255, 1) 81%);
 }
+
 header {
     background-image: url(../img/BG.png);
     background-position: center;
@@ -73,6 +77,7 @@ header {
         position: fixed !important;
         width: 100%;
         z-index: 999;
+
         .my-logo {
             width: 20%;
         }
@@ -85,6 +90,10 @@ header {
 
             &:hover {
                 color: #ED2AB6 !important;
+
+                svg {
+                    fill: #ED2AB6;
+                }
             }
         }
 
@@ -102,6 +111,7 @@ header {
             }
         }
     }
+
     // navigation section ended
 
     // hero section started
@@ -142,8 +152,10 @@ header {
             }
         }
     }
+
     // hero section ended
 }
+
 // header section ended
 
 // smart section started
@@ -180,12 +192,14 @@ header {
             @include gbtn;
         }
     }
-    .image{
-        img{
+
+    .image {
+        img {
             width: 100%;
         }
     }
 }
+
 // smart section started
 
 // vehicle section started
@@ -222,22 +236,25 @@ header {
             @include gbtn;
         }
     }
-    .image{
-        img{
+
+    .image {
+        img {
             width: 100%;
         }
     }
 }
+
 // vehicle section ended
 
 // luggage section started
 .luggage-sec {
     padding: 40px 0;
     align-items: center;
-    .image{
-        img{
-            
-        width: 95%;
+
+    .image {
+        img {
+
+            width: 95%;
         }
     }
 
@@ -271,6 +288,7 @@ header {
         }
     }
 }
+
 // luggage section ended
 
 // pet section started
@@ -307,18 +325,20 @@ header {
             @include gbtn;
         }
     }
-    .image{
-        img{
+
+    .image {
+        img {
             width: 100%;
         }
     }
 }
+
 // pet section ended
 
 // faq section started
-.faq-sec{
+.faq-sec {
     padding: 40px 0;
-    
+
     h4 {
         text-align: center;
         font-size: 21px;
@@ -336,17 +356,19 @@ header {
         line-height: 115.7%;
         letter-spacing: 0px;
     }
-    p{
+
+    p {
         color: #575757;
         font-weight: 400;
         line-height: 182%;
         letter-spacing: 0px;
         font-size: 16px;
     }
-    .accordion{
-        
-    width: 70%;
-    margin: 45px auto;
+
+    .accordion {
+
+        width: 70%;
+        margin: 45px auto;
 
     }
 }
@@ -354,40 +376,47 @@ header {
 // faq section ended
 
 // app section started
-.app{
-background: linear-gradient(157deg, rgba(97,0,255,1) 0%, rgba(126,0,186,1) 54%);
+.app {
+    background: linear-gradient(157deg, rgba(97, 0, 255, 1) 0%, rgba(126, 0, 186, 1) 54%);
 
-.my-container{
-    align-items: center;
-    .content{
-        h1{
-            color: #fff;
-            padding-bottom: 15px;
-            font-size: 40px;
-            font-weight: bolder;
-            line-height: 115.7%;
-        }
-        .link-sec{
-            display: flex;
-            justify-content: space-between;
-            img{
-                width: 48%;
-                &:nth-child(1){
-                    margin-right: 15px;
+    .my-container {
+        align-items: center;
+
+        .content {
+            h1 {
+                color: #fff;
+                padding-bottom: 15px;
+                font-size: 40px;
+                font-weight: bolder;
+                line-height: 115.7%;
+            }
+
+            .link-sec {
+                display: flex;
+                justify-content: space-between;
+
+                img {
+                    width: 48%;
+
+                    &:nth-child(1) {
+                        margin-right: 15px;
+                    }
                 }
             }
         }
-    }
-    img{
-        width: 50%;
+
+        img {
+            width: 50%;
+        }
     }
 }
-}
+
 // app section ended
 // testimonial section started
-.testimonial{
+.testimonial {
     padding: 40px 0;
     text-align: center;
+
     h4 {
         font-size: 21px;
         font-weight: 500;
@@ -411,56 +440,78 @@ background: linear-gradient(157deg, rgba(97,0,255,1) 0%, rgba(126,0,186,1) 54%);
         letter-spacing: 0px;
         font-size: 16px;
     }
-    .my-wrapper{
-        justify-content: space-evenly;
-        margin: 50px 0;
-        .mycard{
-            padding: 10px 18px;
-            border-radius: 30px;
-            background-color: #fff;
-            box-shadow: 0px 0px 10px 2px #f3d2ff85;
-            transition: all .3s;
-            h4{
-                padding-top: 10px;
-                font-size: 16px;
-                font-weight: bold;
-                letter-spacing: 0;
-                color: #141414;
-            }
-            &:hover{
-                transform: scale(1.15);
+
+    .swiper {
+        width: 100%;
+        height: 100%;
+        padding: 50px 0;
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .mycard {
+                width: 80%;
+                padding: 10px 18px;
+                border-radius: 30px;
+                background-color: #fff;
+                box-shadow: 0px 0px 10px 2px #f3d2ff85;
+                transition: all .3s;
+
+                h4 {
+                    padding-top: 10px;
+                    font-size: 16px;
+                    font-weight: bold;
+                    letter-spacing: 0;
+                    color: #141414;
+                }
+
+                &:hover {
+                    transform: scale(1.15);
+                }
             }
         }
     }
 }
+
 // testimonial section ended
 
 
 // footer section stared
-footer{
+footer {
     background-color: #F0EAF2;
     padding: 10px 0;
-    .my-container{
+
+    .my-container {
         align-items: center;
         justify-content: space-between;
         flex-direction: row;
-        .social{
+
+        .social {
             width: 28%;
             display: flex;
             justify-content: space-between;
-            a{
+
+            a {
                 text-decoration: none;
                 color: #371958;
             }
         }
-        .flogo{
+
+        .flogo {
             width: 15%;
             margin-left: 80px;
             text-align: center;
         }
-        p{
+
+        p {
             color: #371958;
             width: 32%;
+            margin-bottom: 0px !important;
         }
     }
 }
@@ -471,65 +522,384 @@ footer{
 
 // media querry section stared
 @media screen and (max-width:765px) {
-    header{
-        .main{
-            .content{
+    header {
+        .main {
+            .content {
                 width: 80%;
                 margin: 30px auto;
             }
-            .image{
+
+            .image {
                 width: 50%;
                 margin: 0 auto;
             }
         }
     }
-    .smart-sec{
-        .image{
+
+    .smart-sec {
+        .image {
             width: 70%;
             margin: 30px auto;
         }
     }
-    .faq-sec{
-        .accordion{
+
+    .faq-sec {
+        .accordion {
             width: 80%;
         }
     }
-    .app{
-        .my-container{
-            .content{
+
+    .app {
+        .my-container {
+            .content {
                 padding-top: 20px;
             }
-            img{
-                    width: 70%;
-                    margin: 0 auto;
-                    margin-top: 20px;
+
+            img {
+                width: 70%;
+                margin: 0 auto;
+                margin-top: 20px;
             }
         }
     }
-    .testimonial{
-        .my-wrapper{
-            .mycard{
+
+    .testimonial {
+        .my-wrapper {
+            .mycard {
                 width: 80%;
                 margin: 20px auto;
             }
         }
     }
-    footer{
-        .my-container{
+
+    footer {
+        .my-container {
             flex-wrap: wrap;
             flex-direction: column;
             justify-content: center;
-            .social{
+
+            .social {
                 width: 80%;
             }
-            .flogo{
+
+            .flogo {
                 width: 80%;
                 margin: 15px 0;
             }
-            p{
+
+            p {
                 width: 80%;
             }
         }
     }
 }
+
 // media querry section ended
+
+
+
+
+// login page started
+.myscrolled {
+    position: absolute;
+    display: block;
+    background: linear-gradient(157deg, rgba(97, 0, 255, 1) 12%, rgba(126, 0, 186, 1) 50%, rgba(97, 0, 255, 1) 81%);
+
+}
+
+.main {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+
+    .center {
+        border-radius: 37px;
+        box-shadow: 0px 0px 10px 2px rgba(71, 0, 149, 16%);
+        padding: 62px;
+        width: 50%;
+        margin: 0 auto;
+        text-align: center;
+
+        h1 {
+            line-height: 115%;
+            font-size: 45px;
+            font-weight: 900;
+        }
+
+        p {
+            font-size: 16px;
+            color: #575757;
+            padding-bottom: 15px;
+        }
+
+        .inputbox {
+            position: relative;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-bottom: 25px;
+            padding: 0;
+
+            input {
+                width: 100%;
+                background-color: #F5F2F6;
+                border-radius: 10px;
+                border: none;
+                padding: 15px;
+                color: #5C3967;
+
+                &::placeholder {
+                    color: #5C3967;
+                    font-size: 15px;
+                }
+
+                &:focus-visible {
+                    outline: none;
+                }
+            }
+
+            img {
+                position: absolute;
+                padding-right: 15px;
+                width: 33px;
+            }
+        }
+
+        .fpass {
+            margin-top: -15px;
+            text-align: right;
+            color: #ED2AB6;
+            text-decoration: none;
+        }
+
+        .sign {
+            color: #ED2AB6;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .mylbtn {
+            @include btn2;
+            margin: 15px 0;
+
+            &:hover {
+                border: 2px solid #ED2AB6;
+                color: #ED2AB6;
+            }
+        }
+    }
+}
+
+.myfooter {
+    position: absolute !important;
+    bottom: 0;
+    width: 100%;
+}
+
+// login page ended
+
+
+// sign up section started
+
+.sscrolled {
+    position: relative !important;
+    background: linear-gradient(157deg, rgba(97, 0, 255, 1) 12%, rgba(126, 0, 186, 1) 50%, rgba(97, 0, 255, 1) 81%);
+
+}
+
+.smain {
+    display: flex;
+    margin: 50px auto;
+    align-items: center;
+    justify-content: center;
+
+    .center {
+        border-radius: 37px;
+        box-shadow: 0px 0px 10px 2px rgba(71, 0, 149, 16%);
+        padding: 62px;
+        width: 50%;
+        margin: 0 auto;
+        text-align: center;
+
+        h1 {
+            line-height: 115%;
+            font-size: 45px;
+            font-weight: 900;
+        }
+
+        p {
+            font-size: 16px;
+            color: #575757;
+            padding-bottom: 15px;
+        }
+
+        .inputbox {
+            position: relative;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-bottom: 25px;
+            padding: 0;
+
+            input {
+                width: 100%;
+                background-color: #F5F2F6;
+                border-radius: 10px;
+                border: none;
+                padding: 15px;
+                color: #5C3967;
+
+                &::placeholder {
+                    color: #5C3967;
+                    font-size: 15px;
+                }
+
+                &:focus-visible {
+                    outline: none;
+                }
+            }
+
+            img {
+                position: absolute;
+                padding-right: 15px;
+                width: 33px;
+            }
+        }
+
+        .fpass {
+            margin-top: -15px;
+            text-align: right;
+            color: #ED2AB6;
+            text-decoration: none;
+        }
+
+        .sign {
+            color: #ED2AB6;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .mylbtn {
+            @include btn2;
+            margin: 15px 0;
+
+            &:hover {
+                border: 2px solid #ED2AB6;
+                color: #ED2AB6;
+            }
+        }
+    }
+}
+
+.myfooter {
+    position: absolute !important;
+    bottom: 0;
+    width: 100%;
+}
+
+// sign up section ended
+
+// forgot password started
+
+// dont need any styeling beacause all classes are styeled at first
+
+// forgot password ended
+
+
+// verify section started
+
+.vmain {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+
+    .center {
+        border-radius: 37px;
+        box-shadow: 0px 0px 10px 2px rgba(71, 0, 149, 16%);
+        padding: 62px;
+        width: 50%;
+        margin: 0 auto;
+        text-align: center;
+
+        h1 {
+            line-height: 115%;
+            font-size: 45px;
+            font-weight: 900;
+        }
+
+        p {
+            font-size: 16px;
+            color: #575757;
+            padding-bottom: 15px;
+        }
+
+        .inputbox {
+            width: 100%;
+            position: relative;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 0;
+
+            input {
+                margin: 0 5px;
+                width: 100%;
+                background-color: #F5F2F6;
+                border-radius: 10px;
+                border: none;
+                padding: 15px;
+                color: #5C3967;
+
+                &::placeholder {
+                    color: #5C3967;
+                    font-size: 15px;
+                }
+
+                &:focus-visible {
+                    outline: none;
+                }
+
+                &::-webkit-inner-spin-button,
+                ::-webkit-outer-spin-button {
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+                }
+            }
+
+            img {
+                position: absolute;
+                padding-right: 15px;
+                width: 33px;
+            }
+        }
+
+        .fpass {
+            margin-top: -15px;
+            text-align: right;
+            color: #ED2AB6;
+            text-decoration: none;
+        }
+
+        .sign {
+            color: #ED2AB6;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .mylbtn {
+            @include btn2;
+            margin: 15px 0;
+
+            &:hover {
+                border: 2px solid #ED2AB6;
+                color: #ED2AB6;
+            }
+        }
+    }
+}
+
+
+// verify section ended
