--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
 }
 
 .scrolled {
+  position: fixed;
+  top: 0;
   box-shadow: 0px -9px 20px 6px #141414;
   background: linear-gradient(157deg, rgb(97, 0, 255) 12%, rgb(126, 0, 186) 50%, rgb(97, 0, 255) 81%);
 }
@@ -23,7 +25,6 @@ header {
   background-size: cover;
 }
 header nav {
-  position: fixed !important;
   width: 100%;
   z-index: 999;
 }
@@ -674,6 +675,7 @@ footer .my-container p {
 .vmain {
   display: flex;
   height: 100vh;
+  padding: 100px 0;
   align-items: center;
   justify-content: center;
 }
@@ -763,4 +765,30 @@ footer .my-container p {
 .vmain .center .mylbtn:hover {
   border: 2px solid #ED2AB6;
   color: #ED2AB6;
+}
+
+@media screen and (max-width: 765px) {
+  .main {
+    height: auto;
+    margin: 50px auto;
+  }
+  .main .center {
+    width: 90%;
+    padding: 35px;
+  }
+  .vmain {
+    height: auto;
+    margin: 50px auto;
+  }
+  .vmain .center {
+    width: 90%;
+    padding: 35px;
+  }
+  .smain {
+    height: auto;
+  }
+  .smain .center {
+    width: 90%;
+    padding: 35px;
+  }
 }/*# sourceMappingURL=style.css.map */
