--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,8 @@
 
 // header section started
 .scrolled {
+    position: fixed;
+    top: 0;
     box-shadow: 0px -9px 20px 6px #141414;
     background: linear-gradient(157deg, rgba(97, 0, 255, 1) 12%, rgba(126, 0, 186, 1) 50%, rgba(97, 0, 255, 1) 81%);
 }
@@ -74,7 +76,6 @@ header {
 
     // navigation section started
     nav {
-        position: fixed !important;
         width: 100%;
         z-index: 999;
 
@@ -697,6 +698,7 @@ footer {
     width: 100%;
 }
 
+
 // login page ended
 
 
@@ -812,6 +814,7 @@ footer {
 .vmain {
     display: flex;
     height: 100vh;
+    padding: 100px 0;
     align-items: center;
     justify-content: center;
 
@@ -903,3 +906,30 @@ footer {
 
 
 // verify section ended
+
+
+@media screen and (max-width:765px) {
+    .main{
+        height: auto;
+        margin: 50px auto;
+        .center{
+            width: 90%;
+            padding: 35px;
+        }
+    }
+    .vmain{
+        height: auto;
+        margin: 50px auto;
+        .center{
+            width: 90%;
+            padding: 35px;
+        }
+    }
+    .smain{
+        height: auto;
+        .center{
+            width: 90%;
+            padding: 35px;
+        }
+    }
+}
